# word-trainer

./: .gitignore  README.md  package-lock.json  package.json  vitest.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: integration_test.rs  lib.rs  mock_db.rs  serialization_test.rs
src-tauri/core/src/algorithm/: mod.rs
src-tauri/core/src/domain/: mod.rs  review_log.rs  schedule.rs  word.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  reminder.rs
src-tauri/src/algorithm/: mod.rs
src-tauri/src/commands/: commands.rs  mod.rs
src-tauri/src/domain/: mod.rs  review_log.rs  schedule.rs  word.rs
src-tauri/src/infrastructure/: db.rs  mod.rs  youdao.rs
src/__tests__/: components.test.ts  integration.test.ts  setup.ts  stores.test.ts  types.test.ts  utils.test.ts
src/components/: AddWord.tsx  AddWordForm.tsx  ReviewPopup.tsx  Settings.tsx  TitleBar.tsx  WordBookDownload.tsx  WordList.tsx  WordSearchDownload.tsx
src/stores/: api.ts  appStore.ts
src/types/: index.ts
