[package]
name = "word-trainer"
version = "0.1.0"
description = "英语单词学习助手 - 基于间隔重复算法的单词复习工具"
authors = ["you"]
edition = "2021"

[lib]
name = "word_trainer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[workspace]
members = ["core"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
word-trainer-core = { path = "core" }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
md5 = "0.7"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
